update user to users
